[package]
name = "ki_calc"
version = "0.1.0"
authors = ["John Murray <5672686+JRMurr@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "ki_calc"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
calamine = "0.17.0"
regex = "1.4.3"
lazy_static = "1.4.0"
thiserror = "1.0.23"
anyhow = "1.0.38"